Add image in Base64 at VideoDTOs