@@ -6,11 +6,17 @@ import com.tecnocampus.LS2.protube_back.persistance.UserRepository;
 import com.tecnocampus.LS2.protube_back.persistance.VideoRepository;
 import com.tecnocampus.LS2.protube_back.service.dto.VideoDTO;
 import com.tecnocampus.LS2.protube_back.service.dto.VideoMetaDataDTO;
+import com.tecnocampus.LS2.protube_back.service.exception.ConvertImageException;
 import com.tecnocampus.LS2.protube_back.service.exception.UserNotFoundException;
 import com.tecnocampus.LS2.protube_back.service.exception.VideoNotFoundException;
 import org.springframework.stereotype.Service;
 
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.util.Base64;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class VideoService {
@@ -22,7 +28,12 @@ public class VideoService {
         this.userRepository = userRepository;
     }
     public List<VideoDTO> getVideos(){
-        return videoRepository.findAll().stream().map(VideoDTO::new).toList();
+        List<Video> videos = videoRepository.findAll();
+        return videos.stream().map(video -> {
+            VideoDTO videoDTO = new VideoDTO(video);
+            videoDTO.setImage(convertImageToBase64(video.getImagePath()));
+            return videoDTO;
+        }).collect(Collectors.toList());
     }
 
     public VideoDTO updateVideo(Long id, String name, VideoMetaDataDTO videoMetaDataDTO) {
@@ -40,6 +51,19 @@ public class VideoService {
     }
 
     public VideoMetaDataDTO getVideoMeta(Long id) {
-        return new VideoMetaDataDTO(videoRepository.findById(id).orElseThrow(()->new VideoNotFoundException(id)));
+        Video video = videoRepository.findById(id).orElseThrow(() -> new VideoNotFoundException(id));
+        VideoMetaDataDTO videoMetaDataDTO = new VideoMetaDataDTO(video);
+        videoMetaDataDTO.setImage(convertImageToBase64(video.getImagePath()));
+        return videoMetaDataDTO;
+    }
+
+    private String convertImageToBase64(String imagePath) {
+        try {
+            File imageFile = new File(imagePath);
+            byte[] imageBytes = Files.readAllBytes(imageFile.toPath());
+            return Base64.getEncoder().encodeToString(imageBytes);
+        } catch (IOException e) {
+            throw new ConvertImageException("Error converting image at path " + imagePath + " to base64");
+        }
     }
 }
